# nanoimage

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SPEC.md
.github/workflows/: ci.yml
benches/: create_test_images.rs
crates/nanoimage-cli/: Cargo.toml
crates/nanoimage-cli/src/: main.rs
crates/nanoimage-cli/src/commands/: batch.rs  common.rs  compress.rs  config_cmd.rs  convert.rs  mod.rs  output.rs
crates/nanoimage-core/: Cargo.toml
crates/nanoimage-core/benches/: compression_bench.rs
crates/nanoimage-core/examples/: gen_test_images.rs
crates/nanoimage-core/src/: config.rs  formats.rs  lib.rs  optimizer.rs  processor.rs
crates/nanoimage-core/tests/: config_tests.rs  e2e_tests.rs  format_tests.rs  integration_tests.rs  optimizer_tests.rs  processor_tests.rs
crates/nanoimage-gui/: Cargo.toml
crates/nanoimage-gui/src/: config_persistence.rs  lib.rs  main.rs
crates/nanoimage-gui/src/ui/: file_panel.rs  log_view.rs  mod.rs  progress.rs  settings_panel.rs
debian/: changelog  control  nanoimage-gui.desktop  nanoimage-gui.dirs  nanoimage-gui.install  nanoimage.install  rules
docs/: API.md  BUILD.md  USAGE.md
scripts/: build-deb.sh
