[workspace]
resolver = "2"
members = [
    "crates/nanoimage-core",
    "crates/nanoimage-cli",
    "crates/nanoimage-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Terry"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
image = "0.25"
oxipng = "9"
webp = "0.3"
resvg = "0.44"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "sync", "fs"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# GUI
egui = "0.29"
eframe = "0.29"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true