[package]
name = "nanoimage-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
image = { workspace = true }
oxipng = { workspace = true }
webp = { workspace = true }
resvg = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = "0.5"